--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "open": "cypress run"
+    "lint": "next lint"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
@@ -18,15 +17,12 @@
     "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "crypto-js": "^4.1.1",
-    "jotai": "^2.4.3",
     "lucide-react": "^0.284.0",
     "nanoid": "^5.0.1",
     "next": "13.5.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "slugify": "^1.6.6",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "use-clipboard-copy": "^0.2.0",
@@ -39,7 +35,6 @@
     "@types/react-dom": "^18.2.11",
     "autoprefixer": "^10.4.16",
     "commitizen": "^4.3.0",
-    "cypress": "^13.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.51.0",
     "eslint-config-next": "13.5.4",
