--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
   "name": "mijikai",
-  "version": "0.1.0",
+  "author": "Haikel Ilham Hakim",
+  "version": "1.0.0",
   "private": true,
+  "license": "MIT",
+  "description": "Mijikai is a free shorten URL Website. No ads, no tracker!",
+  "homepage": "https://mijikai.space",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/haikelz/mijikai"
+  },
   "scripts": {
+    "commit": "cz",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/supabase-js": "^2.38.0",
     "@t3-oss/env-nextjs": "^0.7.0",
     "@tanstack/react-query": "^4.36.1",
-    "@vercel/analytics": "^1.1.0",
     "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -21,6 +30,7 @@
     "nanoid": "^5.0.1",
     "next": "13.5.4",
     "next-themes": "^0.2.1",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^1.14.0",
@@ -30,9 +40,9 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
-    "@types/node": "^20.8.3",
-    "@types/react": "^18.2.25",
-    "@types/react-dom": "^18.2.11",
+    "@types/node": "^20.8.4",
+    "@types/react": "^18.2.28",
+    "@types/react-dom": "^18.2.13",
     "autoprefixer": "^10.4.16",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
@@ -45,5 +55,10 @@
     "prettier": "^3.0.3",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
