--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ NEXT_PUBLIC_DEVELOPMENT_URL
 NEXT_PUBLIC_PRODUCTION_URL
 NEXT_PUBLIC_SUPABASE_URL
 NEXT_PUBLIC_SUPABASE_KEY
+NEXT_PUBLIC_GOOGLE_ID
+NEXT_PUBLIC_GOOGLE_SECRET
