--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
 NEXT_PUBLIC_DEVELOPMENT_URL
 NEXT_PUBLIC_PRODUCTION_URL
-NEXT_PUBLIC_SUPABASE_URL
-NEXT_PUBLIC_SUPABASE_KEY
+NEXT_PUBLIC_GITHUB_ID
+NEXT_PUBLIC_GITHUB_SECRET
 NEXT_PUBLIC_GOOGLE_ID
 NEXT_PUBLIC_GOOGLE_SECRET
+NEXT_PUBLIC_SUPABASE_URL
+NEXT_PUBLIC_SUPABASE_KEY
+NEXTAUTH_SECRET
+NEXTAUTH_URL
