--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,11 @@ next-env.d.ts
 
 # env
 .env
+
+# Auto Generated PWA files
+/public/sw.js
+/public/workbox-*.js
+/public/worker-*.js
+/public/sw.js.map
+/public/workbox-*.js.map
+/public/worker-*.js.map
