fix: PWA images

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,24 +3,19 @@
   "short_name": "Mijikai",
   "icons": [
     {
-      "src": "/docs/logo-192x192.png",
+      "src": "/images/logo-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/docs/logo-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png"
-    },
-    {
-      "src": "/docs/logo-512x512.png",
+      "src": "/images/logo-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
-  "theme_color": "#FFFFFF",
-  "background_color": "#FFFFFF",
+  "theme_color": "#000000",
+  "background_color": "#000000",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait"
