--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "dependencies": {
     "@ducanh2912/next-pwa": "^9.7.2",
     "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/supabase-js": "^2.38.2",
     "@t3-oss/env-nextjs": "^0.7.1",
