--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "open:e2e": "cypress open",
+    "test:e2e": "cypress run"
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^9.7.2",
@@ -25,17 +27,17 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
-    "@supabase/supabase-js": "^2.38.2",
+    "@supabase/supabase-js": "^2.38.4",
     "@t3-oss/env-nextjs": "^0.7.1",
-    "@tanstack/react-query": "^5.0.0",
-    "axios": "^1.5.1",
+    "@tanstack/react-query": "^5.0.5",
+    "axios": "^1.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "jotai": "^2.4.3",
-    "lucide-react": "^0.288.0",
+    "jotai": "^2.5.0",
+    "lucide-react": "^0.290.0",
     "nanoid": "^5.0.2",
-    "next": "13.5.6",
-    "next-auth": "^4.24.3",
+    "next": "14.0.0",
+    "next-auth": "^4.24.4",
     "next-themes": "^0.2.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
@@ -47,21 +49,22 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
-    "@types/node": "^20.8.7",
-    "@types/react": "^18.2.31",
+    "@trivago/prettier-plugin-sort-imports": "^4.2.1",
+    "@types/node": "^20.8.9",
+    "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
     "autoprefixer": "^10.4.16",
     "commitizen": "^4.3.0",
+    "cypress": "^13.3.3",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.52.0",
-    "eslint-config-next": "13.5.6",
+    "eslint-config-next": "14.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.2",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^3.3.5",
     "turbo": "^1.10.16",
     "typescript": "^5.2.2"
   },
