--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,35 +26,36 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
-    "@supabase/supabase-js": "^2.39.0",
+    "@supabase/supabase-js": "^2.38.4",
     "@t3-oss/env-nextjs": "^0.7.1",
-    "@tanstack/react-query": "^5.12.2",
-    "axios": "^1.6.2",
+    "@tanstack/react-query": "^5.0.5",
+    "axios": "^1.6.0",
     "class-variance-authority": "^0.7.0",
-    "jotai": "^2.6.0",
-    "lucide-react": "^0.294.0",
-    "nanoid": "^5.0.4",
-    "next": "14.0.4",
-    "next-auth": "^4.24.5",
+    "clsx": "^2.0.0",
+    "jotai": "^2.5.0",
+    "lucide-react": "^0.290.0",
+    "nanoid": "^5.0.2",
+    "next": "14.0.0",
+    "next-auth": "^4.24.4",
     "next-themes": "^0.2.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.48.2",
-    "tailwind-merge": "^2.1.0",
+    "react-hook-form": "^7.47.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7",
     "use-clipboard-copy": "^0.2.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.10.4",
-    "@types/react": "^18.2.42",
-    "@types/react-dom": "^18.2.17",
+    "@types/node": "^20.8.9",
+    "@types/react": "^18.2.33",
+    "@types/react-dom": "^18.2.14",
     "autoprefixer": "^10.4.16",
-    "cypress": "^13.6.1",
-    "eslint": "^8.55.0",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.3.6",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.3.3"
+    "cypress": "^13.3.3",
+    "eslint": "^8.52.0",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.2.2"
   }
 }
