--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   "devDependencies": {
     "@mijikai/eslint-config": "workspace:*",
     "@mijikai/typescript-config": "workspace:*",
-    "@trivago/prettier-plugin-sort-imports": "^4.2.1",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.52.0",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "prettier": "^3.1.0",
-    "turbo": "latest"
+    "eslint": "^8.57.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "prettier": "^3.2.5",
+    "turbo": "^1.12.5"
   },
   "packageManager": "pnpm@8.9.0",
   "engines": {
