--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mijikai",
+  "name": "@mijikai/web",
   "author": "Haikel Ilham Hakim",
   "version": "1.0.0",
   "private": true,
@@ -19,43 +19,45 @@
     "test:e2e": "cypress run"
   },
   "dependencies": {
-    "@ducanh2912/next-pwa": "^10.2.6",
-    "@hookform/resolvers": "^3.3.4",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-radio-group": "^1.1.3",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@supabase/supabase-js": "^2.42.4",
-    "@t3-oss/env-nextjs": "^0.9.2",
-    "@tanstack/react-query": "^5.29.2",
-    "axios": "^1.6.8",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "jotai": "^2.8.0",
-    "lucide-react": "^0.370.0",
-    "nanoid": "^5.0.7",
-    "next": "14.2.2",
-    "next-auth": "^4.24.7",
-    "next-themes": "^0.3.0",
-    "qrcode.react": "^3.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.51.3",
-    "tailwind-merge": "^2.2.2",
+    "@ducanh2912/next-pwa": "^10.2.9",
+    "@hookform/resolvers": "^4.1.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@supabase/supabase-js": "^2.49.1",
+    "@t3-oss/env-nextjs": "^0.12.0",
+    "@tanstack/react-query": "^5.67.2",
+    "axios": "^1.8.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "jotai": "^2.12.2",
+    "lucide-react": "^0.479.0",
+    "nanoid": "^5.1.3",
+    "next": "15.2.1",
+    "next-auth": "^4.24.11",
+    "next-themes": "^0.4.5",
+    "qrcode.react": "^4.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "use-clipboard-copy": "^0.2.0",
-    "zod": "^3.22.4"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/node": "^20.12.7",
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
-    "autoprefixer": "^10.4.19",
-    "cypress": "^13.7.3",
-    "eslint": "^9.0.0",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5"
+    "@mijikai/typescript-config": "workspace:*",
+    "@tailwindcss/postcss": "^4.0.12",
+    "@types/node": "^22.13.10",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "autoprefixer": "^10.4.21",
+    "cypress": "^14.1.0",
+    "eslint": "^9.22.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.12",
+    "typescript": "^5.8.2"
   }
 }
