hotfix(env): add missing env to `turbo.json`

--- a/turbo.json
+++ b/turbo.json
@@ -26,6 +26,8 @@
     "NEXT_PUBLIC_SUPABASE_KEY",
     "NEXTAUTH_SECRET",
     "NEXTAUTH_URL",
-    "NEXT_TELEMETRY_DISABLED"
+    "NEXT_TELEMETRY_DISABLED",
+    "ADMIN_EMAIL",
+    "ADMIN_PASSWORD"
   ]
 }
