hotfix: `created_at`

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.5.0",
     "jotai": "^2.12.2",
     "lucide-react": "^0.479.0",
     "nanoid": "^5.1.3",
