--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,49 +13,51 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.9",
-    "@hookform/resolvers": "^5.0.1",
-    "@radix-ui/react-dialog": "^1.1.7",
-    "@radix-ui/react-dropdown-menu": "^2.1.7",
-    "@radix-ui/react-label": "^2.1.3",
-    "@radix-ui/react-popover": "^1.1.7",
-    "@radix-ui/react-radio-group": "^1.2.4",
-    "@radix-ui/react-separator": "^1.1.3",
-    "@radix-ui/react-slot": "^1.2.0",
-    "@radix-ui/react-tooltip": "^1.2.0",
-    "@supabase/supabase-js": "^2.49.4",
-    "@t3-oss/env-nextjs": "^0.12.0",
-    "@tanstack/react-query": "^5.72.2",
-    "axios": "^1.8.4",
+    "@hookform/resolvers": "^5.1.1",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-radio-group": "^1.3.7",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@supabase/supabase-js": "^2.50.1",
+    "@t3-oss/env-nextjs": "^0.13.8",
+    "@tanstack/react-query": "^5.81.2",
+    "@tanstack/react-table": "^8.21.3",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "framer-motion": "^12.6.3",
-    "jotai": "^2.12.2",
-    "lucide-react": "^0.487.0",
+    "framer-motion": "^12.19.1",
+    "jotai": "^2.12.5",
+    "lucide-react": "^0.523.0",
     "nanoid": "^5.1.5",
-    "next": "15.3.0",
+    "next": "15.3.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.55.0",
-    "sonner": "^2.0.3",
-    "tailwind-merge": "^3.2.0",
+    "react-hook-form": "^7.58.1",
+    "sonner": "^2.0.5",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "use-clipboard-copy": "^0.2.0",
-    "zod": "^3.24.2"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@mijikai/typescript-config": "workspace:*",
-    "@tailwindcss/postcss": "^4.1.3",
-    "@types/node": "^22.14.0",
-    "@types/react": "^19.1.0",
-    "@types/react-dom": "^19.1.2",
+    "@tailwindcss/postcss": "^4.1.10",
+    "@types/node": "^24.0.3",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "autoprefixer": "^10.4.21",
-    "cypress": "^14.3.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.3",
+    "cypress": "^14.5.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.10",
     "typescript": "^5.8.3"
   }
 }
